    loading binary files.

  - The value of LDFLAGS supplied at configuration time, was not used
    when building shared libraries or FASL files.

  - HASH-TABLE-SIZE and HASH-TABLE-TEST have been finally implemented.

  - The configuration process now does respect the values of libdir,
    bindir, infodir,... supplied by the user.

* Documentation:

  - New manual page documents the scripting facilities of ECL
    (contributed by Julian St.)

* Visible changes:

  - New command line options -shell and -norc, which are useful for
    scripting. New and more robust handling of command line options,
    permits combining (and repeating) the options -load, -eval, -shell
    in a number of ways.

  - SI:FILE-COLUMN now always returns a number, which may be 0 for
    streams that do not have that information.

  - The compiler (COMPILE-FILE, COMPILE, etc), now understands
    logical pathnames.

  - Under windows, the system directory is defined to be the place
    where ecl.exe resides. Windows user will want to use the
    command "make windows-dist", which builds a ZIP file with a
    ready to be installed ECL.

  - If you want to install ECL to a different place, use "make prefix=..."
    instead of the old form "make PREFIX=...". ECL now follows the GNU
    coding standards in this particular point.

TODO:
=====

* Selectively remove spices from read.d and object.h

* Implement memory collection based on mmap()

* Improve the garbage collector using kernel information about dirty
  pages.

* Improve fixnum_times.

* #'unread-char does not fail when the character differs from the
  original one.

* vector-push-extend may succeed even if the vector is not
  adjustable. Should we be more strict?

* should we relax ASSOC? (See lists156.tst)

* boost setf and generalized places -- the current implementation is
  extremely faulty with respect to the standards.

* expand parse_namestring() to accept scaped strings, spaces, etc.
